@@ -2,6 +2,9 @@ Changelog for Babel.
 
 Babel 3.0.0-dev
 =====================================
+- [#145] bugfixed unlinking unsync TVs
+- added options to link to specific resource or all resources
+- [#144] added options to unlink to specific resource or all resources
 - [#123] Minor cosmetic update
 - [#139][#140] Fixed Unable to link translations by searching by pagetitle
 - fixed resource title's width
